# VMTranslator

.cache/clangd/index/: codeWriter.c.416DB123F9315403.idx  codeWriter.c.7456B4CB4D11639A.idx  codeWriter.h.DD5BE37844B9F38E.idx  main.c.BEB4EF0FBFAA0CA2.idx  main.c.E92D2316BC1C65D6.idx  parser.c.536805E9E69D84A3.idx  parser.c.FE4A08B0F35316E8.idx  parser.h.63EC2032C3A3BAD4.idx
Parser/: CMakeLists.txt
Parser/include/: parser.h
src/: CMakeLists.txt  main.c
src/CodeWriter/: CMakeLists.txt
src/CodeWriter/include/: codeWriter.h
src/CodeWriter/src/: codeWriter.c
src/Parser/include/: parser.h
src/Parser/src/: parser.c
